refactor: remove uses of 3rd-party deprecated code